# gama-deformation

./: .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  ChangeLog.1  ChangeLog.3  HACKING.md  Makefile.am  NEWS  README  README.language  configure.ac  gama-local.pro
doc/: README  (+14 more)
gen-deformation-data/: .gitignore  CMakeLists.txt  gen-deformation-data.cpp  gen-deformation-data.sh  obs.cpp  obs.h  point.h  transformation.cpp  transformation.h  xml.h
gen-deformation-data/deformation-examples/: Makefile  cube-1.1.gkf  cube-1.1.xml  cube-1.xml  gama-local.1.gkf  gama-local.1.xml  gama-local.gkf  gama-local.xml
gen-deformation-data/pracovni/: cube-1.xml  demo01-a.gkf  demo01-a.txt  demo01-a.xml  demo01-b.gkf  demo01-b.txt  demo01-b.xml
scripts/: Makefile.am  gama-local-pro.cpp  slovnikar.cpp
src/: Makefile.am  demo01.m  demo01.sh  gama-g3.cpp  gama-local-deformation.cpp  gama-local-yaml2gkf.cpp  gama-local.cpp  krumm2gama-local.cpp  xml2defo.cpp
tests/acord2/: .gitignore  CMakeLists.txt  Makefile.am  a2diff-main.cpp  a2g-main.cpp  a2g.cpp  a2g.h  acord.cpp  acord.h  acord2-a2diff.in  acord2-a2g.in
tests/acord2/input/a2diff/: Makefile.am  kokes-traverse-01.gkf  traverse-01-en-left.gkf  traverse-01-en-right.gkf  traverse-01-es-left.gkf  traverse-01-es-right.gkf  traverse-01-ne-left.gkf  traverse-01-ne-right.gkf  traverse-01-nw-left.gkf  traverse-01-nw-right.gkf  traverse-01-se-left.gkf  traverse-01-se-right.gkf  traverse-01-sw-left.gkf  traverse-01-sw-right.gkf  traverse-01-wn-left.gkf  traverse-01-wn-right.gkf  traverse-01-ws-left.gkf  traverse-01-ws-right.gkf
tests/acord2/input/a2g/: Makefile.am  angle-01.0.a2g  angle-01.a2g  azimuth-01.a2g  azimuth-02.a2g  azimuth-03.a2g  azimuth-04.a2g  azimuth-05.a2g  polar-01.a2g  polar-02.a2g  traverse-01.a2g  traverse-02.a2g  traverse-03.a2g  traverse-04.a2g  trivial-01.a2g  trivial-02.a2g  trivial-03.a2g
tests/extra-tests/: Makefile.am  gama-local-extra-tests.sh_
tests/extra-tests/input/: Makefile.am  railway-survey-with-aproximate-xy.gkf
tests/extra-tests/scripts/: Makefile.am  gama-local-extra-tests.sh_
tests/gama-g3/: .gitignore  CMakeLists.txt  Makefile.am
tests/gama-g3/input/: Makefile.am  ghilani-gnss-v1.xml  ghilani-gnss-v2.xml  ghilani-gnss-v3-adj.xml  ghilani-gnss-v3.xml
tests/gama-g3/input/1.10/: demo-g3-01-adj.xml  demo-g3-02-adj.xml  demo-g3-03-adj.xml
tests/gama-g3/input/sjtsk05/: dopnul.xml  vyberova_udrzba.xml
tests/gama-g3/src/: Makefile.am  check_adjustment.cpp  check_ellipsoid_xyz2blh.cpp  gama-g3-adjustment.sh_  gama-g3-ellipsoid-xyz2blh.sh_  gama-g3-xmllint-xsd.sh_
tests/gama-local/: CMakeLists.txt  Makefile.am  gama-local-adjustment.sh_  gama-local-algorithms.sh_  gama-local-equivalents.sh_  gama-local-export.sh_  gama-local-externs.sh_  gama-local-gkf2yaml.sh_  gama-local-parameters.sh_  gama-local-sqlite-reader.sh_  gama-local-version.sh_  gama-local-xml-results.sh_  gama-local-xml-xml.sh_  gama-local-yaml2gkf.sh_  octave-gama-local.sh_  xmllint-gama-local-adjustment-xsd.sh_  xmllint-gama-local-yaml2gkf.sh_
tests/gama-local/input/: Ghilani_GNSS_Baselines.xml  Makefile.am  README  azimuth-angle.gkf  azimuth-azimuth.gkf  azimuth-distance.gkf  bug-2019-04-23-oleg-goussev.gkf  bug-2019-08-06-integer-coordinates.gkf  bug-2019-08-06-integer-coordinates.xml  bug-2019-08-13-traverse-knin_male.xml  bug-2019-08-20-knin_test.xml  cube-1.gkf  cube-1.m  cube-1.yaml  extern-azimuth-distance.gkf  extern-seq-dsuloha-d.gkf  fixed-azimuth.gkf  fixed-constrained.gkf  gama-local-deprecated.gkf  gama-local-nop.gkf  gama-local-par.gkf  geodet-pc-123.gkf  geodet-pc-123.xml  geodet-pc-123.yaml  geodet-pc-218.gkf  geodet-pc-218.xml  geodet-pc-218.yaml  jezerka-ang.gkf  jezerka-ang.xml  jezerka-ang.yaml  jezerka-dir.gkf  jezerka-dir.xml  jezerka-dir.yaml  krasovsky-1926.gkf  krasovsky-1926.xml  local_3d.gkf  local_3d.xml  mikhail-7.4-cov.README  mikhail-7.4-cov.yaml  mikhail-7.4.xml  (+17 more)
tests/gama-local/input/bug/: 2019-08-13-traverse-knin_male.gkf  2019-08-20-knin_test.gkf  test-linearization-angle.gkf  test-linearization-angle.xml
tests/gama-local/input/ctu/: 2019-prager.gkf  2019-prager.xml  2019-zeman.gkf  2019-zeman.xml  2020-barta-phase_0-1TK.gkf  2020-barta-phase_0-1TK.xml  2020-barta-phase_0-2TK.gkf  2020-barta-phase_0-2TK.xml  2020-barta-phase_1-1TK.gkf  2020-barta-phase_1-1TK.xml  2020-barta-phase_1-2TK.gkf  2020-barta-phase_1-2TK.xml  2021-talapkova.gkf  2021-talapkova.xml
tests/gama-local/input/extra/: railway-survey.gkf
tests/gama-local/input/sim/: from-to-dh.gkf  from-to-dh.xml
tests/gama-local/scripts/: .gitignore  Makefile.am  check_externs.cpp  check_html.cpp  check_version.cpp  check_xml_results.cpp  check_xml_xml.cpp  check_xyz.cpp  compare_xml_adjustment.cpp  gama-local-adjustment.in  gama-local-equivalents.in  gama-local-externs.in  gama-local-extra-tests.in  gama-local-html.in  gama-local-updated-xml.sh_  gama-local-version.in  gama-local-version.sh_  gama-local-xml-xml.in  octave-gama-local.in
tests/gama-local/src/: .gitignore  Makefile.am  check_algorithms.cpp  check_html.cpp  check_version.cpp  check_xml_coordinates.cpp  check_xml_results.cpp  check_xml_xml.cpp  check_xyz.cpp  compare_xml_adjustment.cpp  compare_xml_adjustment.h  gama-local-equivalents.sh_  gama-local-html.sh_  gama-local-sqlite-reader.sh_  gama-local-updated-xml.sh_  sqlite_init_db.cpp
tests/krumm/: CMakeLists.txt  Makefile.am  cmp_xml_file.cpp  cmp_xml_file.h  cmp_xml_file_main.cpp  krumm-xml-xml.sh_  krumm2gama-local.sh_
tests/krumm/input/: .gitignore  README.md
tests/krumm/input/1D/: Baumann_Height_fix.adj  Ghilani12_6_Height_fix.adj  Krumm_Height_dyn.adj  Krumm_Height_fix.adj  Niemeier_Height_fix1.adj  Niemeier_Height_free.adj
tests/krumm/input/2D/: Benning82_Distance_fix.adj  Benning83_DistanceDirection_fix.adj  Benning85.adj  Benning88_Distance_fix.adj  Carosio_DistanceDirection_fix.adj  Ghilani14_5_Distance_fix.adj  Ghilani15_4_Angle_fix.adj  Ghilani15_5_Angle_fix.adj  Ghilani16_1_Traverse.adj  Ghilani16_2_DistanceAngleAzimuth_fix.adj  Ghilani21_10_DistanceAngle_fix.adj  Ghilani21_1_DistanceAngle_fix.adj  (+20 more)
(+301 files in other folders)
